--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,25 @@ body {
 	grid-template-rows: 70px;
 }
 
-#logo {
+.logo {
+	width: 60vw;
+	display: flex;
+
+}
+
+.logo img {
+	width: 100%;
+	max-width: 40px;
+	max-height: 40px;
 	grid-column: 1 / 2;
 
+}
+
+.logo p {
+	font-size: 1.8em;
+	margin-top: 5px;
+	font-weight: 200;
+	color:  #d99f0d;
 }
 
 #links {
