--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ li {
 	text-align: center;
 	grid-row: 1 / 2;
 	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+	margin-bottom: 10px;
 }
 
 #form {
@@ -68,11 +70,19 @@ li {
 }
 
 #email {
-
+	max-width: 300px;
+	width: 100%;
+	padding: 7px;
 }
 
 #submit {
 	margin: 15px 0 15px 0;
+	padding: 10px;
+	border: none;
+	background-color: #009900;
+	cursor: pointer;
+	color: white;
+	border-radius: 4px;
 }
 
 main {
