--- a/css/style.css
+++ b/css/style.css
@@ -136,11 +136,11 @@ main {
 }
 
 #instrument {
+	font-family: 'Poppins', sans-serif;
 	background-color: #ddd;
 	width: 100%;
 	padding: 15px 0 15px 0;
 	margin-top: 0;
-	font-family: 'Poppins', sans-serif;
 }
 
 ul {
@@ -190,4 +190,21 @@ footer a {
 	justify-content: flex-end;
 	padding: 0 15px 15px 0;
 	margin-top: 10px;
+}
+
+@media (max-width: 800px) {
+
+	#products {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	#instrument {
+		font-size: 1rem;
+	}
+
+	.unit {
+		max-width: 300px;
+		width: 100%;
+	}
 }
