--- a/css/style.css
+++ b/css/style.css
@@ -102,13 +102,23 @@ main {
 	grid-column: 1 / 2;
 	align-self: center;
 	justify-self: end;
-	font-size: 2em;
+	font-size: 2.5em;
 	color: orange;
 	padding-right: 20px;
 }
 
 .desc {
 	grid-column: 2 / 3;
+	margin-top: 0;
+}
+
+.desc h2 {
+	margin-bottom: 0;
+	font-weight: 400px;
+}
+
+.desc p {
+	margin-top: 0;
 }
 
 #video {
@@ -207,4 +217,16 @@ footer a {
 		max-width: 300px;
 		width: 100%;
 	}
+
+	.icon {
+		justify-self: center;
+	}
+
+	#content {
+		display: grid;
+		grid-template-columns: 1fr 4fr;
+		grid-column-gap: 10px;
+		margin: 50px auto 0 auto;
+	}
+
 }
