--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,6 @@ body {
 	display: flex;
 	justify-content: space-between;
 	padding: 10px 25px 0 0;
-
 }
 
 #nav-bar a {
@@ -57,6 +56,16 @@ body {
 
 li {
 	cursor: pointer;
+}
+
+label {
+	font-size: 30px;
+	text-align: right;
+	display: none;
+}
+
+#toggle {
+	display: none;
 }
 
 #header2 {
@@ -221,11 +230,20 @@ footer a {
 		align-items: center;
 	}
 
+	label {
+		display: block;
+		cursor: pointer;
+	}
+
 	#navlink {
-		display: flex;
 		flex-direction: column;
 		padding: 0;
 		text-align: right;
+		display: none;
+	}
+
+	#toggle:ckecked + #navlink {
+		display: block;
 	}
 
 	#header2 {
